--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     environment:
       - TZ=Europe/Berlin
     healthcheck:
-      test: curl -k --fail --head http://localhost:8025/ || exit 1
+      test: curl -s --fail http://localhost:8025/ > /dev/null || exit 1
       interval: 10s
       timeout: 30s
       retries: 3
